# sdk

./: AGENTS.md  CLAUDE.md  LICENSE  README.md  README.pt-BR.md  llms.txt  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  publish.yml
dotnet/: Clarian.sln  README.md
dotnet/Clarian.Sdk/: BalancesService.cs  CashInService.cs  CashOutService.cs  Clarian.Sdk.csproj  ClarianClient.cs  ClarianException.cs  ClarianWebhooks.cs  Models.cs  SandboxService.cs  TransactionsService.cs  WalletsService.cs  WebhooksService.cs
dotnet/Clarian.Sdk.Tests/: Clarian.Sdk.Tests.csproj  ClarianClientTests.cs  FakeHttpMessageHandler.cs  SandboxTests.cs  WebhooksTests.cs
go/: README.md  client.go  client_test.go  errors.go  go.mod  sandbox.go  sandbox_test.go  types.go  webhooks.go  webhooks_test.go
java/: README.md  build.gradle.kts  settings.gradle.kts
php/: .gitignore  README.md  composer.json  phpunit.xml
php/src/: Balances.php  CashIn.php  CashOut.php  ClarianException.php  Client.php  CurlTransport.php  HttpTransport.php  Sandbox.php  Transactions.php  Wallets.php  Webhooks.php  WebhooksService.php
php/tests/: ClientTest.php  FakeTransport.php  SandboxTest.php  WebhooksTest.php
python/: README.md  pyproject.toml
python/clarian/: __init__.py  client.py  errors.py  sandbox.py  webhooks.py
python/tests/: mock_transport.py  test_client.py  test_sandbox.py  test_webhooks.py
ruby/: README.md  clarian.gemspec
ruby/lib/: clarian.rb
ruby/test/: all.rb  fake_transport.rb  (+3 more)
src/: client.ts  errors.ts  http.ts  index.ts  types.ts  webhooks.ts
(+36 files in other folders)
