[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "clarian-sdk"
version = "0.4.0"
description = "Official Python SDK for the Clarian Finance API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Clarian Finance", email = "contact@clarian.finance" }]
keywords = ["clarian", "pix", "fintech", "sdk", "brazil", "payments"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/clarian-finance/sdk"
Repository = "https://github.com/clarian-finance/sdk"

[tool.setuptools.packages.find]
where = ["."]
include = ["clarian*"]
